# ichthus_controller

./: CMakeLists.txt  README.md  package.xml
cfg/: ichthus_commands.yaml  ichthus_i30.yaml  ichthus_i30.yaml.orig
include/ichthus_controller/: ecrt.h  ichthus_controller.h  pipe_open.h
launch/: ichthus_controller.launch
msg/: can_msg.msg  obd_msg.msg
src/: controllers.cpp  controllers.cpp.orig  ethercat.cpp  ichthus_controller.sh  ichthus_controller_client.cpp  ichthus_controller_gnome.sh  ichthus_controller_server_core.cpp  ichthus_controller_server_node.cpp  util.cpp
src/vcsd/: CanBasic.h  CanManager.cpp  Can_HA.cpp  Controller_HA.cpp  Ecat_HA.cpp  EthercatCyclic.cpp  EthercatManager.cpp  GlobalParam.cpp  HviManager.cpp  Hvi_HA.cpp  Log.cpp  Main.cpp  Makefile  Motion_HA.cpp  ObdManager.cpp  Obd_HA.cpp  asciiart.c  can_decode.cpp  ecat.c  exe  fault.h  hvi.c  hybridautomata.cpp  hybridautomata.h  killvcsmd.sh  license.txt  masterset.sh  my_explain.txt  obd.c  packetparser.cpp  printsyslog.sh  regex.cpp  replace.cpp  socketprogram.h  umsg.h  vcsmd.cpp  vthread.h  xml.cpp
src/vcsd/vehicle/: avante.xml  i30.xml
srv/: con_msg.srv
